@@ -123,6 +123,8 @@ class TestUserCreateView(TestCase, WagtailTestUtils):
         response = self.get()
         self.assertEqual(response.status_code, 200)
         self.assertTemplateUsed(response, 'wagtailusers/users/create.html')
+        self.assertContains(response, 'Password:')
+        self.assertContains(response, 'Password confirmation:')
 
     def test_create(self):
         response = self.post({
@@ -187,6 +189,131 @@ class TestUserCreateView(TestCase, WagtailTestUtils):
         # Check that the user was not created
         users = get_user_model().objects.filter(username='testuser')
         self.assertEqual(users.count(), 0)
+
+    def test_create_with_missing_password(self):
+        """Password should be required by default"""
+        response = self.post({
+            'username': "testuser",
+            'email': "test@user.com",
+            'first_name': "Test",
+            'last_name': "User",
+            'password1': "",
+            'password2': "",
+        })
+
+        # Should remain on page
+        self.assertEqual(response.status_code, 200)
+        self.assertTemplateUsed(response, 'wagtailusers/users/create.html')
+
+        self.assertTrue(response.context['form'].errors['password1'])
+
+        # Check that the user was not created
+        users = get_user_model().objects.filter(username='testuser')
+        self.assertEqual(users.count(), 0)
+
+    @override_settings(WAGTAILUSERS_PASSWORD_REQUIRED=False)
+    def test_password_fields_exist_when_not_required(self):
+        """Password fields should still be shown if WAGTAILUSERS_PASSWORD_REQUIRED is False"""
+        response = self.get()
+        self.assertEqual(response.status_code, 200)
+        self.assertTemplateUsed(response, 'wagtailusers/users/create.html')
+        self.assertContains(response, 'Password:')
+        self.assertContains(response, 'Password confirmation:')
+
+    @override_settings(WAGTAILUSERS_PASSWORD_REQUIRED=False)
+    def test_create_with_password_not_required(self):
+        """Password should not be required if WAGTAILUSERS_PASSWORD_REQUIRED is False"""
+        response = self.post({
+            'username': "testuser",
+            'email': "test@user.com",
+            'first_name': "Test",
+            'last_name': "User",
+            'password1': "",
+            'password2': "",
+        })
+
+        # Should redirect back to index
+        self.assertRedirects(response, reverse('wagtailusers_users:index'))
+
+        # Check that the user was created
+        users = get_user_model().objects.filter(username='testuser')
+        self.assertEqual(users.count(), 1)
+        self.assertEqual(users.first().email, 'test@user.com')
+        self.assertFalse(users.first().has_usable_password())
+
+    @override_settings(WAGTAILUSERS_PASSWORD_REQUIRED=False)
+    def test_optional_password_is_still_validated(self):
+        """When WAGTAILUSERS_PASSWORD_REQUIRED is False, password validation should still apply if a password _is_ supplied"""
+        response = self.post({
+            'username': "testuser",
+            'email': "test@user.com",
+            'first_name': "Test",
+            'last_name': "User",
+            'password1': "banana",
+            'password2': "kumquat",
+        })
+
+        # Should remain on page
+        self.assertEqual(response.status_code, 200)
+        self.assertTemplateUsed(response, 'wagtailusers/users/create.html')
+
+        self.assertTrue(response.context['form'].errors['password2'])
+
+        # Check that the user was not created
+        users = get_user_model().objects.filter(username='testuser')
+        self.assertEqual(users.count(), 0)
+
+    @override_settings(WAGTAILUSERS_PASSWORD_REQUIRED=False)
+    def test_password_still_accepted_when_optional(self):
+        """When WAGTAILUSERS_PASSWORD_REQUIRED is False, we should still allow a password to be set"""
+        response = self.post({
+            'username': "testuser",
+            'email': "test@user.com",
+            'first_name': "Test",
+            'last_name': "User",
+            'password1': "banana",
+            'password2': "banana",
+        })
+
+        # Should redirect back to index
+        self.assertRedirects(response, reverse('wagtailusers_users:index'))
+
+        # Check that the user was created
+        users = get_user_model().objects.filter(username='testuser')
+        self.assertEqual(users.count(), 1)
+        self.assertEqual(users.first().email, 'test@user.com')
+        self.assertTrue(users.first().has_usable_password())
+        self.assertTrue(users.first().check_password('banana'))
+
+    @override_settings(WAGTAILUSERS_PASSWORD_ENABLED=False)
+    def test_password_fields_not_shown_when_disabled(self):
+        """WAGTAILUSERS_PASSWORD_ENABLED=False should cause password fields to be removed"""
+        response = self.get()
+        self.assertEqual(response.status_code, 200)
+        self.assertTemplateUsed(response, 'wagtailusers/users/create.html')
+        self.assertNotContains(response, 'Password:')
+        self.assertNotContains(response, 'Password confirmation:')
+
+    @override_settings(WAGTAILUSERS_PASSWORD_ENABLED=False)
+    def test_password_fields_ignored_when_disabled(self):
+        """When WAGTAILUSERS_PASSWORD_REQUIRED is False, users should always be created without a usable password"""
+        response = self.post({
+            'username': "testuser",
+            'email': "test@user.com",
+            'first_name': "Test",
+            'last_name': "User",
+            'password1': "banana",  # not part of the form - should be ignored
+            'password2': "kumquat",  # not part of the form - should be ignored
+        })
+
+        # Should redirect back to index
+        self.assertRedirects(response, reverse('wagtailusers_users:index'))
+
+        # Check that the user was created
+        users = get_user_model().objects.filter(username='testuser')
+        self.assertEqual(users.count(), 1)
+        self.assertEqual(users.first().email, 'test@user.com')
+        self.assertFalse(users.first().has_usable_password())
 
 
 class TestUserDeleteView(TestCase, WagtailTestUtils):
@@ -311,6 +438,8 @@ class TestUserEditView(TestCase, WagtailTestUtils):
         self.test_user = get_user_model().objects.create_user(
             username='testuser',
             email='testuser@email.com',
+            first_name='Original',
+            last_name='User',
             password='password'
         )
 
@@ -327,9 +456,70 @@ class TestUserEditView(TestCase, WagtailTestUtils):
         response = self.get()
         self.assertEqual(response.status_code, 200)
         self.assertTemplateUsed(response, 'wagtailusers/users/edit.html')
+        self.assertContains(response, 'Password:')
+        self.assertContains(response, 'Password confirmation:')
 
     def test_nonexistant_redirect(self):
         self.assertEqual(self.get(user_id=100000).status_code, 404)
+
+    def test_simple_post(self):
+        response = self.post({
+            'username': "testuser",
+            'email': "test@user.com",
+            'first_name': "Edited",
+            'last_name': "User",
+            'password1': "newpassword",
+            'password2': "newpassword",
+            'is_active': 'on'
+        })
+        # Should redirect back to index
+        self.assertRedirects(response, reverse('wagtailusers_users:index'))
+
+        # Check that the user was edited
+        user = get_user_model().objects.get(pk=self.test_user.pk)
+        self.assertEqual(user.first_name, 'Edited')
+        self.assertTrue(user.check_password('newpassword'))
+
+    def test_password_optional(self):
+        """Leaving password fields blank should leave it unchanged"""
+        response = self.post({
+            'username': "testuser",
+            'email': "test@user.com",
+            'first_name': "Edited",
+            'last_name': "User",
+            'password1': "",
+            'password2': "",
+            'is_active': 'on'
+        })
+        # Should redirect back to index
+        self.assertRedirects(response, reverse('wagtailusers_users:index'))
+
+        # Check that the user was edited but password is unchanged
+        user = get_user_model().objects.get(pk=self.test_user.pk)
+        self.assertEqual(user.first_name, 'Edited')
+        self.assertTrue(user.check_password('password'))
+
+    def test_validate_password(self):
+        """Password fields should be validated if supplied"""
+        response = self.post({
+            'username': "testuser",
+            'email': "test@user.com",
+            'first_name': "Edited",
+            'last_name': "User",
+            'password1': "banana",
+            'password2': "kumquat",
+            'is_active': 'on'
+        })
+        # Should remain on page
+        self.assertEqual(response.status_code, 200)
+        self.assertTemplateUsed(response, 'wagtailusers/users/edit.html')
+
+        self.assertTrue(response.context['form'].errors['password2'])
+
+        # Check that the user was not edited
+        user = get_user_model().objects.get(pk=self.test_user.pk)
+        self.assertEqual(user.first_name, 'Original')
+        self.assertTrue(user.check_password('password'))
 
     def test_edit_and_deactivate(self):
         response = self.post({
@@ -354,7 +544,6 @@ class TestUserEditView(TestCase, WagtailTestUtils):
         self.assertEqual(user.is_superuser, False)
         # Check that the user is no longer active
         self.assertEqual(user.is_active, False)
-
 
     def test_edit_and_make_superuser(self):
         response = self.post({
@@ -470,6 +659,36 @@ class TestUserEditView(TestCase, WagtailTestUtils):
 
         # Should not redirect to index
         self.assertEqual(response.status_code, 200)
+
+    @override_settings(WAGTAILUSERS_PASSWORD_ENABLED=False)
+    def test_password_fields_not_shown_when_disabled(self):
+        """WAGTAILUSERS_PASSWORD_ENABLED=False should cause password fields to be removed"""
+        response = self.get()
+        self.assertEqual(response.status_code, 200)
+        self.assertTemplateUsed(response, 'wagtailusers/users/edit.html')
+        self.assertNotContains(response, 'Password:')
+        self.assertNotContains(response, 'Password confirmation:')
+
+    @override_settings(WAGTAILUSERS_PASSWORD_ENABLED=False)
+    def test_password_fields_ignored_when_disabled(self):
+        """When WAGTAILUSERS_PASSWORD_REQUIRED is False, existing password should be left unchanged"""
+        response = self.post({
+            'username': "testuser",
+            'email': "test@user.com",
+            'first_name': "Edited",
+            'last_name': "User",
+            'is_active': 'on',
+            'password1': "banana",  # not part of the form - should be ignored
+            'password2': "kumquat",  # not part of the form - should be ignored
+        })
+
+        # Should redirect back to index
+        self.assertRedirects(response, reverse('wagtailusers_users:index'))
+
+        # Check that the user was edited but password is unchanged
+        user = get_user_model().objects.get(pk=self.test_user.pk)
+        self.assertEqual(user.first_name, 'Edited')
+        self.assertTrue(user.check_password('password'))
 
 
 class TestUserProfileCreation(TestCase, WagtailTestUtils):
